// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Renders the Homepage 1`] = `
<div
  className="App"
>
  <header
    className="d-flex header"
    data-testid="header"
  >
    <div
      className="d-none"
    />
    <p
      className="homePath"
      data-testid="headerText"
    >
      gni per capita in the world
    </p>
  </header>
  <section
    className="spinnerContainer"
  >
    <div
      className="spinner-border"
      role="status"
      style={
        Object {
          "height": "14rem",
          "width": "14rem",
        }
      }
    >
      <span
        className="sr-only"
        data-testid="spinnerSpan"
      >
        Loading...
      </span>
    </div>
  </section>
</div>
`;

exports[`Countries Renders the Countries page 1`] = `
<section
  className="spinnerContainer"
>
  <div
    className="spinner-border"
    role="status"
    style={
      Object {
        "height": "14rem",
        "width": "14rem",
      }
    }
  >
    <span
      className="sr-only"
      data-testid="spinnerSpan"
    >
      Loading...
    </span>
  </div>
</section>
`;

exports[`GniWorld Renders the homepage GniWorld 1`] = `
<section
  className="spinnerContainer"
>
  <div
    className="spinner-border"
    role="status"
    style={
      Object {
        "height": "14rem",
        "width": "14rem",
      }
    }
  >
    <span
      className="sr-only"
      data-testid="spinnerSpan"
    >
      Loading...
    </span>
  </div>
</section>
`;

exports[`Header Renders the Header 1`] = `
<header
  className="d-flex header"
  data-testid="header"
>
  <div
    className="d-none"
  />
  <p
    className="homePath"
    data-testid="headerText"
  >
    gni per capita in the world
  </p>
</header>
`;
